Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3077

C++ TFileTransport ignores return code from ftruncate

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9.3
    • 0.9.3
    • C++ - Library
    • None

    Description

      If ftruncate fails, nobody will know...

      src/thrift/transport/TFileTransport.cpp: In member function 'void apache::thrift::transport::TFileTransport::writerThread()':
      src/thrift/transport/TFileTransport.cpp:316:34: warning: ignoring return value of 'int ftruncate(int, __off_t)', declared with attribute warn_unused_result [-Wunused-result]
          THRIFT_FTRUNCATE(fd_, offset_);
      

      Attachments

        Activity

          People

            jking3 James E. King III
            jking3 James E. King III
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: