THRIFT-3077 TFileTransport fix ignored ftruncate result